GPencil: Copy paste stroke(s) does not respect autokeying value #100999

Closed
opened 2022-09-12 10:44:44 +02:00 by Aleš Jelovčan · 5 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 513.29

Blender Version
Broken: version: 3.4.0 Alpha, branch: master (modified), commit date: 2022-09-10 06:54, hash: 8cb3b49e51
Worked: /
Short description of error
Pasting strokes creates new keyframe even when it's set to off

image.png

Exact steps for others to reproduce the error
Open blender, 2d mode, draw a stroke.
Disable auto keying, paste the stroke in new position

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 513.29 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master (modified), commit date: 2022-09-10 06:54, hash: `8cb3b49e51` Worked: / **Short description of error** Pasting strokes creates new keyframe even when it's set to off ![image.png](https://archive.blender.org/developer/F13483061/image.png) **Exact steps for others to reproduce the error** Open blender, 2d mode, draw a stroke. Disable auto keying, paste the stroke in new position

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-09-12 11:58:54 +02:00

This issue was referenced by 22c73b36af

This issue was referenced by 22c73b36af1ac9820a8b49aebbcc72849596ea0d

This issue was referenced by 2d069b609b

This issue was referenced by 2d069b609b98274b08ad0515a32457e4bd8f757e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100999
There is no content yet.