Fix T100999: GPencil Copy paste stroke(s) does not respect autokeying

The operator was not checking the status of the 
Autokey button.